kubernetes/apps/base/webdev/games-manager/backend/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: games-manager-backend
    app.kubernetes.io/instance: games-manager-backend
    app.kubernetes.io/name: games-manager-backend
  name: games-manager-backend
  namespace: webdev
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: games-manager-backend
  template:
    metadata:
      labels:
        app: games-manager-backend
        app.kubernetes.io/name: games-manager-backend
    spec:
      nodeSelector:
        worker: "true"
      containers:
      - image: directus/directus:10
        name: games-manager-backend
        ports:
        - containerPort: 8055
          hostPort: 8055
          protocol: TCP
